--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -17,7 +17,7 @@ jobs:
         run: apt list --installed    
       - name: Removing previous chrome instances on runner 
         run: sudo apt purge google-chrome-stable  
-        
+
        # Need to fetch reqs if needed
       - name: Installing all necessary packages
         run: pip install chromedriver-autoinstaller selenium pyvirtualdisplay
@@ -26,11 +26,12 @@ jobs:
 
       - name: Running the Python script
         run: python Selenium-Template.py
-        
+
       - name: Commit and Push The Results From Python Selenium Action
         run: |
          git config --global user.name "github-actions[bot]"
          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
          git add -A
-         git commit -m "GitHub Actions Results added"
-         git push
+         git diff-index --quiet HEAD || git commit -m "GitHub Actions Results added"
+         git pull origin main
+         git push origin main
