--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -20,7 +20,7 @@ jobs:
 
        # Need to fetch reqs if needed
       - name: Installing all necessary packages
-        run: pip install chromedriver-autoinstaller selenium pyvirtualdisplay
+        run: pip install typing-extensions chromedriver-autoinstaller selenium pyvirtualdisplay
       - name: Install xvfb
         run: sudo apt-get install xvfb
 
